@@ -102,6 +102,9 @@ typedef enum  {
   BLE_ADVERTISING_MULTIPLE_ONE = 65536,
   BLE_ADVERTISING_MULTIPLE_SHIFT = 16,//GET_BIT_NUMBER(BLE_ADVERTISING_MULTIPLE_ONE),
   BLE_ADVERTISING_MULTIPLE_MASK = 255 << BLE_ADVERTISING_MULTIPLE_SHIFT,
+
+  /// These are flags that should be reset when the softdevice starts up
+  BLE_RESET_ON_SOFTDEVICE_START = BLE_IS_SENDING|BLE_IS_SCANNING|BLE_IS_ADVERTISING
 } BLEStatus;
 
 typedef enum {
