@@ -40,6 +40,7 @@
             Added E.defrag to perform defragmentation - still beta!
             nRF52: fix issue where restarting the softdevice would reset the RTC
               - fixes Bangle.js watchdog reset
+            nRF52: fix issue where advertising flags could get out of sync after SD restart
 
      2v04 : Allow \1..\9 escape codes in RegExp
             ESP8266: reading storage is not working for boot from user2 (fix #1507)
